# Magesty

./: .gitignore  CMakeLists.txt  README.md  game.py  log.txt  main.cpp  misc.h  settings.json
configs/: config.txt
res/img/slash_1/: timings.txt
src/: Background.h  Boss.cpp  Boss.h  Data.cpp  Data.h  Entity.cpp  Entity.h  GUI.h  Object.cpp  Object.h  Player.cpp  Player.h  Skills.h  ai.py  animation.py  data.py  enemy.py  game.py  main.cpp  misc.h  misc.py  object.py  player.py  settings.json  sound.py  spells.py  util.cpp  util.py  view.py
